--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -2,6 +2,8 @@
 
 {% load static %}
 
+{% block title %} | About Us{% endblock %}
+
 {% block content %}
 <section id="showcase-inner" class="py-5 text-white">
   <div class="container">
@@ -81,7 +83,7 @@
     aperiam, unde aliquid at similique!
   </h4>
   <hr />
-  <a href="listings.html" class="btn btn-secondary text-white btn-lg"
+  <a href="{% url 'listings' %}" class="btn btn-secondary text-white btn-lg"
     >View Our Featured Listings</a
   >
 </section>
