--- a/templates/partials/_topbar.html
+++ b/templates/partials/_topbar.html
@@ -8,19 +8,19 @@
       </div>
       <div class="col-md-4">
         <div class="social text-right">
-          <a href="#">
+          <a href="https://twitter.com/">
             <i class="fab fa-twitter"></i>
           </a>
-          <a href="#">
+          <a href="https://www.facebook.com/">
             <i class="fab fa-facebook"></i>
           </a>
-          <a href="#">
+          <a href="https://www.linkedin.com/">
             <i class="fab fa-linkedin"></i>
           </a>
-          <a href="#">
+          <a href="https://www.instagram.com/">
             <i class="fab fa-instagram"></i>
           </a>
-          <a href="#">
+          <a href="https://www.pinterest.com/">
             <i class="fab fa-pinterest"></i>
           </a>
         </div>
